# banking-console-app

./: CMakeLists.txt  README.md
Libraries/: InterfaceCommunication.h
Libraries/Bank/: clsBankClient.h  clsCurrency.h  clsDepositScreen.h  clsShowTransactionScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsWithdrawScreen.h
Libraries/Ui/auth/: clsLoginRegisterScreen.h  clsLoginScreen.h
Libraries/Ui/clients/: clsAddNewClientScreen.h  clsClientListScreen.h  clsDeleteClientScreen.h  clsFindClientScreen.h  clsUpdateClientScreen.h
Libraries/Ui/core/: clsMainScreen.h  clsScreen.h
Libraries/Ui/currencies/: clsCurrenciesListScreen.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeScreen.h  clsFindCurrencyScreen.h  clsUpdateCurrencyRateScreen.h
Libraries/Ui/users/: clsAddNewUserScreen.h  clsDeleteUserScreen.h  clsFindUserScreen.h  clsManageUsersScreen.h  clsUpdateUserScreen.h  clsUsersListScreen.h
Libraries/Users/: clsUser.h
Logs/: LoginsLog.txt
src/: BankSystem.cpp
